fix all warnings